@@ -27,6 +27,9 @@
 ###############################################################################
 
 2004/03/25 Mikael Barbeaux
+	* Implemented activeUser method of UserManagement.
+	* Implemented getUsersToActive method of UserManagement.
+	* Implemented first version of UserManagement session bean.
 	* Implemented addUser method of UserCreation.
 	* Implemented first version of UserCreation session bean.
 
